fix alignement élèments bannière

--- a/app/assets/stylesheets/admin/composants/_card.scss
+++ b/app/assets/stylesheets/admin/composants/_card.scss
@@ -18,6 +18,11 @@
     h4 {
       margin-bottom: 1rem;
     }
+    .banner__action {
+      p {
+        margin: 0;
+      }
+    }
     .bouton-principal {
       max-width: 10.5rem;
     }
